# AdaptorPrototype2

./: .gitignore  AdaptorPrototypeMk4.sln  sm_config.ini
AdaptorPrototypeMk4/: .gitignore  AdaptorPrototypeMk4.vcxproj  AdaptorPrototypeMk4.vcxproj.filters  CMakeLists.txt  PartialUpdates.md  README.md  TESTING.md  sm_config.ini  sm_config_instance2.ini
AdaptorPrototypeMk4/OLD_DELETEME/: win32_helpers.h
AdaptorPrototypeMk4/src/: change_tracking.cpp  change_tracking.h  config.cpp  config.h  main.cpp  memory_layout.h  network_sync.cpp  network_sync.h  shared_memory.cpp  shared_memory.h  sync_message.h
AdaptorPrototypeMk4/test/: CMakeLists.txt  test_config.cpp  test_partial_updates.cpp  test_shared_memory.cpp
